easycall/landing/css/main.css
/* ... */
.modal-wrapper,
.modal-wrapper1 {
  width:100%;
  height:100%;
  position:fixed;
  top:0; left:0;
  background: rgba(0,0,0,.5);
  visibility:hidden;
  opacity:0;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.modal-wrapper.open{
  opacity:1;
  visibility:visible;
}

.modal{
  width:600px;
/*  min-height:400px;*/
  height: auto;
  display:block;
  margin:50% 0 0 -300px;
  position:relative;
  top:50%; left:50%;
  background:#fff;
  opacity:0;
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
}

.modal-wrapper.open .modal{
  margin-top:-200px;
  opacity:1;
}

.head{
  width:100%;
  height:70px;
  padding:1.5em 5%;
  overflow:hidden;
  background: rgba(84, 64, 63,1);
}

.head h3 {
    text-align: center;
    margin: auto;
    color: white;
}

.btn-close{
  width:32px;
  height:32px;
  display:block;
  float:right;
  padding: 0 !important;
  position: absolute;
  right: 25px;
  top: 22px;  
}

.btn-close::before, .btn-close::after{
  content:'';
  width:32px;
  height:6px;
  display:block;
  background: white;
}

.btn-close::before{
  margin-top:12px;
  -webkit-transform:rotate(45deg);
  -ms-transform:rotate(45deg);
  transform:rotate(45deg);
}

.btn-close::after{
  margin-top:-6px;
  -webkit-transform:rotate(-45deg);
  -ms-transform:rotate(-45deg);
  transform:rotate(-45deg);
}

.content{
  padding:5%;
  text-align: center;
  color: rgba(84, 64, 63,1); 
}

.b-register {
    margin: 20px;
    margin-bottom: 0;
}

.b-register span {
    padding: 0;
    color: rgba(84, 64, 63,1);   
}

.content .on-reg {
   color: rgba(84, 64, 63,1);  
}

.b-register span:hover,
.on-reg:hover {
    text-decoration: underline;
    color: rgba(84, 64, 63,1); 
}

.all-register input:focus {
   border: 2px solid rgba(84, 64, 63,1);
    box-shadow: none;
}

.modal-wrapper input {
    min-width: 320px;
    height: 54px;
}

.modal-wrapper input:first-child {
    margin-bottom: 15px;
}

.b-register1 {
    display: none;
}

.all-register .z_recover {
     color: rgba(84, 64, 63,1);
}

.all-register .here-we-go {
    max-width: 320px;
    margin: auto;
    margin-bottom: 10px;
    padding: 8px;
    border: 2px solid rgba(84, 64, 63,1);
    color: rgba(84, 64, 63,1);
    -webkit-transition: all .3s;
    transition: all .3s;
    
}

.all-register .here-we-go:hover {
    text-decoration: none;
    background: rgba(84, 64, 63,1);
    color: white;
}

.all-register.iforget {
    display: none;
}


.header__menu {
  position: absolute;
  top: 20px;
  right: 20%;
  z-index: 999;    
}

.hamburger {
  display: block;
  position: absolute;
  width: 30px;
  height: 40px;
  z-index: 2;
}

.hamburger__inner {
  display: block;
  width: 40px;
  height: 6px;
  margin-top: 12px;
  background: rgba(84, 64, 63,1);;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}
.hamburger__inner::before, .hamburger__inner::after {
  display: block;
  position: absolute;
  content: "";
  z-index: -1;
  width: 40px;
  height: 6px;
  background: rgba(84, 64, 63,1);;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}
.hamburger__inner::before {
  top: 0;
}
.hamburger__inner::after {
  top: 24px;
}

.hamburger--open .hamburger__inner {
  background: none;
}
.hamburger--open .hamburger__inner::before, .hamburger--open .hamburger__inner::after {
  top: 12px;
}
.hamburger--open .hamburger__inner::before {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}
.hamburger--open .hamburger__inner::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}


.header__menu {
    display: none;
}

.shitty-start {
    position: absolute;
  top: 377px;
  right: 222px;
}

.shitty-start input {
    border: 2px solid #f05543;
    background: white;
}

.go-to-start {
    display: inline-block;
    background: #f05543;
    color: white;
    width: 200px;
    height: 55px;
    line-height: 55px;
    text-align: center;
}

.shitty-start-two {
    position: static;
    text-align: center;
}

.shitty-start-two .main-start {
    margin: 0;
}


@media screen and (max-width: 1124px) {
   video {
        display: none;
    } 
}
/* ... */

